app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
/* ... */
.variable-list-grid {
  padding-top: 16px!important;

  .variable-list-category-container {
    height: 24px;

    .variable-list-category-text {
      padding-top: 5px;
      font: $subhead-font;
      color: $heat-scale-1;
    }
  }

  .variable-list-title {
    width: 60%;
    h2 {
      font: $headline-font;
    }
  }

  .variable-list-row {
    height: 123px;
    border-bottom: 1px solid $heat-scale-4;
    overflow: hidden;

    .x-grid-cell-inner {
      padding: 0px;
      white-space: normal;
    }
  }

  .variable-list-description {
    width: 60%;
    padding-top: 12px;
    padding-bottom: 12px;
    color: $heat-scale-1;
    font: $body-one-font;
  }
}

.learn-header-bar {
  border-bottom: 1px solid #e1e1e1;
  margin: 0 28px 0 28px;
  overflow: visible!important;
}

.learn-search-input {
  margin: 14px 28px;

  input {
    height: 34px;
    font-size: 12px;
    border-radius: 2px;
    border-color: $gray-7!important;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */

  }
  input.x-form-focus {
    border-color: $gray-6!important;
    color: $black;
  }
}

.learn-study-info {

  tr > td {
    padding-bottom: 1em;
    vertical-align: top;

    &.item-label {
      color: $secondary-text-color;
      padding-right: 1em;
      width: 130px;
    }
  }
}

.reportinfo {
  font-family: Georgia, serif;
  .reportinfoheader {
    font-size: 18px;
    padding-bottom: 5px;
  }
  .reportinfoname {
    width: 120px;
    display: inline-block;
    font-size: 16px;
    font-weight: bold;
  }
  .reportinfovalue {
    font-size: 16px;
  }

}

.reportView {
  padding-top: $sectionTopPadding;
  width: 100% !important;
  background-color: white;
  padding-left: $pageLeftPadding;
}

.reportContent {
  padding-left: 28px;
  padding-top: 10px;
  background-color: #ffffff;
}

.learnpageheader {
  background-color: $gray-7;
}

.learnFilter {
  .imgbutton {
    width: 21px!important;
    height: 21px!important;
    top: 26px!important;
    left: 228px!important;
  }

  .sorter {
    span.sorter-label {
      font-size: 12px;
      text-transform: none;
      display: block;
      color: $gray-25;
      padding: 0 0 4px 0;
    }

    span.sorter-content {
      font-size: 12px;
      margin: 4px 0 20px 0;
      padding: 4px 8px;
      display: block;
      @include prefixer(border-radius, 2px);
      background-color: $white;
      border: 1px solid $gray-6;
      line-height: 22px;
      height: 32px;
      width: 253px;
    }

    @include smallStandout;
  }
}
.learn-report-info {
  width: 100%;
  padding-left: $pageLeftPadding;
}

.learn-report-header-column {
  width: 50%;
  padding-right: 10px;
}

.reportmodulecontainer {
  padding-top: $sectionTopPadding;
}

.reportlearngridlocked {
  .detail-row {
    .x-grid-cell {
      padding: 13px 0 13px 16px;
    }
  }

  .detail-row-text {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

.reportlearngrid
{
  .detail-row{
    .x-grid-cell-inner {
      white-space: normal;
      padding: 4px 0 16px 0px;
    }
  }

  .detail-row-text {
    padding: 0px;
  }
}

.antigengrid
{
  padding-left: $pageLeftPadding!important;
  padding-right: 42px!important;
  padding-top: 16px!important;

  .x-grid-empty
  {
    top: 255px;
  }

  .detail-row {
    height: 123px;
    .detail-description {
      height: 74px;
    }
  }
  .antigen-description {
    padding-top: 12px;
    padding-bottom: 12px;
    color: $heat-scale-1;
    font: $body-one-font;
  }
  .x-column-header-trigger {
    height: 22px;
  }
  .x-grid-header-ct {
    .x-box-inner {
      border-bottom: 2px solid $heat-scale-4;
    }
  }
  .x-column-header-inner {
    padding-top: 2px;
    padding-bottom: 2px;
  }
  .x-column-header-text {
    padding-bottom: 12px;

    overflow: auto;
    font: $subhead-font;
    color: $heat-scale-2;
    text-transform: uppercase;
  }
}

